My work for today. It seems that the matrix proccessing question actually does work.

--- a/Testing Enhancements/Testing_MC_NA_Matrix.Rmd
+++ b/Testing Enhancements/Testing_MC_NA_Matrix.Rmd
@@ -82,3 +82,14 @@ make_results_tables(
 
 
 
+## Hmmm this isn't working lets get into the weeds
+
+```{r}
+
+question <- questions[[2]]
+
+question
+
+```
+
+
